# sql-x-ray

./: .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: .sqlucent.toml  schema.sql  top_users.sql  upsert_users.sql
examples/pipeline/: 01_stg_orders.sql  02_dim_users.sql  03_fact_revenue.sql
src/sql_x_ray/: __init__.py  analyzer.py  cli.py  graph.py  htmlout.py  ir.py  lineage.py  lint.py  narrate.py  preprocess.py  schema.py  walkthrough.py
src/sqlucent/: __init__.py  analyzer.py  cli.py  config.py  cost.py  graph.py  htmlout.py  impact.py  ir.py  lint.py  narrate.py  project.py
tests/: test_analyzer.py  test_cli.py  test_narrate.py
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts
